--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <div id="lead">
         <div id="lead-content">
             <!-- <img src="images/img_self.jpg" alt="profile_pic" style="scale:0.5;"> -->
-            <h1>Michael Kung</h1>
-            <h2>Senior Data Analyst</h2>
+            <h1>Rony Joseph</h1>
+            <h2>Senior Business Analyst</h2>
             <!-- <a href="images/resume.pdf" class="btn-rounded-white" download>Download Resume</a>÷\ -->
         </div>
         <!-- End #lead-content -->
@@ -74,7 +74,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Michael Kung is a motivated, self-starting Data Analyst with a can-do attitude and thrives under-pressure. 
+                        Rony Joseph is a motivated, self-starting Data Analyst with a can-do attitude and thrives under-pressure. 
                         Passionate about data, presenting data, and utilizing data to drive business decision. 
                         Known among co-workers and team members for stellar problem-solving and communication on large-scale projects. 
                         Seeking to leverage data analytical skills to improve corporate performance. 
@@ -87,11 +87,11 @@
                         <br>
                         Contact Me:
                         <br>
-                        Email: m.kung889@gmail.com
+                        Email: ronyjoseph898@gmail.com
                         <br>
-                        <a href="https://www.linkedin.com/in/michael-k-368b0b6b/">LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/rony-joseph-7422b0169/">LinkedIn</a>
                         <br>
-                        <a href="https://github.com/mkung8889">GitHub</a>
+                        <a href="https://github.com/ronyjoseph898">GitHub</a>
                     </p>
                 </div>
             </div>
@@ -328,7 +328,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2019 Michael Kung
+                        Copyright &copy; 2019 Rony Joseph
                     </p>
                 </div>
                 <div class="col-sm-2 top">
